v1.10.12:
- Tweaked a few Druid CCs in the CC modules. If you've got a more up-to-date list of any of the CCs, please send them along to icehud@parnic.com
- Hopefully fixed a problem that could cause a custom counter to loop forever and cause framerate problems. (ticket #230)

v1.10.11:
- Updated TOC for IceHUD_Options module
- Fixed custom stack counters in graphical mode tracking spell charges failing to update when the maximum number of charges changes (such as with a talented 2-charge Demon Hunter Throw Glaive)

v1.10.10.1:
- Fixed the old energy ticker showing up in 7.1.

v1.10.10:
- Updated TOC for 7.1
- Re-enabled PlayerAbsorb by default by popular demand.

v1.10.9:
- Added support for the Scale setting on mirror bars and extended the mod-wide scale setting to a range of 20%-200% (ticket #228).
- Fixed Runes module causing a memory leak.
- Added a toggle to cause Runes to display the same way as combo points: show a series of icons that empty and fill back up based on the number of runes available.
- Added a toggle to cause Runes to display as just a number of available runes.
- Added an option to keep Runes displayed on the screen whether you have a target or not if not all runes are recharged.
- Added display of the player's current absorb amount to the top of the health bar. Incoming heals display on top of both. Disabled PlayerAbsorb by default because of this addition.

v1.10.8:
- Fixed combo points sometimes showing a max of 5 when it should show a max of 6.
- Added coloration to the Roll The Bones module for how many RtB buffs the player has active (ticket #227, thanks Zahariel!).

v1.10.7:
- Added an option to PlayerMana to allow scaled mana color gradients to be used on classes that don't use Mana.
- Added a user-submitted Roll The Bones module (ticket #220, thanks Zahariel!).

v1.10.6:
- Fixed TargetInfo debuffs appearing to be spaced differently than buffs
- Added support for the Pain mana type

v1.10.5:
- Added colors for Maelstrom mana