@@ -29,7 +29,7 @@ function PlayerHealth.prototype:GetDefaultSettings()
 	settings["hideBlizz"] = false
 	settings["hideBlizzParty"] = false
 	settings["upperText"] = "[PercentHP:Round]"
-	settings["lowerText"] = "[FractionalHP:HPColor:Bracket]"
+	settings["lowerText"] = "[FractionalHP:Short:HPColor:Bracket]"
 	settings["allowMouseInteraction"] = false
 	settings["allowMouseInteractionCombat"] = false
 	settings["healAlpha"] = 0.6
