@@ -1,6 +1,7 @@
 v1.10.12:
 - Tweaked a few Druid CCs in the CC modules. If you've got a more up-to-date list of any of the CCs, please send them along to icehud@parnic.com
-- Hopefully fixed a problem that could cause a custom counter to loop forever and cause framerate problems. (ticket #230)
+- Fixed a problem that could cause a custom counter to loop forever and cause framerate problems. (ticket #230)
+- Updated default text values for Health and Mana modules to show values in shortened form so they're more readable. Anyone who has customized their text will not be affected by this change and the shortened form only kicks in once values reach 10,000.
 
 v1.10.11:
 - Updated TOC for IceHUD_Options module
